--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
         <button type="button" class="button bluebutton" data-modal-open>zamów usługę</button>
         <div class="backdrop <!--is-hidden-->"data-modal><div class="modal"><form name="lead">
           <h4 class ="form-title">Zostaw swoje dane w formularzu poniżej</h4>
-          <label class="label"><span>
-            Imię </span><div class=form-icon><svg>
+          <label class="label">
+            Imię <div class=form-icon-person><svg>
               <use height="18px"
               width="18px"
-              href="./images/icons.svg#icon-person-black"></use></svg></div><input type="text" name="name">
+              href="./images/icons.svg#icon-person-black"></use></svg></div><input type="text" name="name" class="form-input-name">
             </label>
-          <label class="label">Telefon <div class=form-icon><svg>
+          <label class="label">Telefon <div class=form-icon-phone><svg>
             <use height="18px"
             width="18px"
-            href="./images/icons.svg#icon-phone-black"></use></svg></div><input type="text" name="phonenumber"></label>
-          <label class="label">Email <div class=form-icon><svg>
+            href="./images/icons.svg#icon-phone-black"></use></svg></div><input type="tel" name="phonenumber"class="form-input-phone"></label>
+          <label class="label">Email <div class=form-icon-email><svg>
             <use height="18px"
             width="18px"
-            href="./images/icons.svg#icon-email-black"></use></svg></div><input type="text" name="email"></label>
+            href="./images/icons.svg#icon-email-black"></use></svg></div><input type="text" name="email" class="form-input-email"></label>
           <label class="label">Komentarz <textarea name="comment" placeholder="Wprowadź tekst" class="textarea"></textarea></label>
-          <input type="checkbox" class="checkbox"><label class="policies"> Oświadczam iż akceptuję <a href="#">Regulamin</a> i <a href="#">Politykę Prywatności</a>.</label>
+          <input type="checkbox" class="policies-checkbox"> <!--visualy-hidden--><label class="policies"> Oświadczam iż akceptuję <a href="#">Regulamin</a> i <a href="#">Politykę Prywatności</a>.</label>
           <button type="subbmit" class="send-form">Wyślij</button></form><button type="button" class="close-btn" data-modal-close>
             <svg class="xclose"><use 
             height="18px"
