--- a/portfolio.html
+++ b/portfolio.html
@@ -285,34 +285,31 @@
       </div>
     </section>
     <footer class="footer">
-      <div class="container">
-        <div class="footerflex">
-          <div>
-            <div class="logo-bottom">
-              <a href="index.html"><span class="blue">Web</span>Studio</a>
-            </div>
-
-            <div class="contact-bottom">
-              <address class="contact-bottom-address">
-                m.Warszawa, Aleje Jerozolimskie 21
-              </address>
-              <div class="contact-bottom-links">
-                <ul class="contacts">
-                  <li class="contact-detail">
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                  </li>
-                  <li class="contact-detail">
-                    <a href="tel:+48111111111">+48 111 111 111</a>
-                  </li>
-                </ul>
-              </div>
+      <div class="container"><div class="footerflex">
+        <div><div class="logo-bottom">
+          <a href="index.html"><span class="blue">Web</span>Studio</a>
+        </div>
+        
+          <div class="contact-bottom">
+            <address class="contact-bottom-address">
+              m.Warszawa, Aleje Jerozolimskie 21
+            </address>
+            <div class="contact-bottom-links">
+              <ul class="contacts">
+                <li class="contact-detail">
+                  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contact-detail">
+                  <a href="tel:+48111111111">+48 111 111 111</a>
+                </li>
+              </ul></div>
             </div>
           </div>
-          <div class="joinus">
+          <div class="joinus-container">
             <h4 class="joinus-header">DOŁĄCZ DO NAS</h4>
             <ul class="no-bullets social-list">
-              <li>
-                <a class="social-icon-circle-footer" href="#">
+              <li><a class="social-icon-circle-footer" href="#">
+                
                   <svg class="social-icon-footer">
                     <use
                       height="20px"
@@ -322,9 +319,8 @@
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="social-icon-circle-footer" href="#">
-                  <svg class="social-icon-footer">
+              <li><a class="social-icon-circle-footer" href="#">
+                    <svg class="social-icon-footer">
                     <use
                       height="20px"
                       width="20px"
@@ -333,9 +329,8 @@
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="social-icon-circle-footer" href="#">
-                  <svg class="social-icon-footer">
+              <li><a class="social-icon-circle-footer" href="#">
+                <svg class="social-icon-footer">
                     <use
                       height="20px"
                       width="20px"
@@ -344,9 +339,8 @@
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="social-icon-circle-footer" href="#">
-                  <svg class="social-icon-footer">
+              <li><a class="social-icon-circle-footer" href="#">
+               <svg class="social-icon-footer">
                     <use
                       height="20px"
                       width="20px"
@@ -357,8 +351,12 @@
               </li>
             </ul>
           </div>
+          <div class="newsletter-container">
+            <h4 class="joinus-header">ZAPISZ SIĘ DO NEWSLETERA</h4><div class="signin">
+            <form><input type="email" name="newsletersignin" class="newsletter-input" placeholder="E-mail" required></form>
+            <button type="submit" class="newsletter-button">Zapisz się<svg class="send-icon"><use height="24px" width="24px" href="./images/icons.svg#icon-icon_send"></use></svg></button></div>
         </div>
-      </div>
+              </div>
     </footer>
   </body>
 </html>
